modal header and footer comp, cancel button

--- a/gold-admin-frontend/src/app/views/partials/components/button/button.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/button/button.component.html
@@ -1,6 +1,6 @@
-<button *ngIf="type == 'submit'" mat-raised-button color="primary" [ngClass]="myClass" class=" submit"
+<button *ngIf="type == 'submit'" mat-raised-button color="primary" [ngClass]="myClass" class="submit"
     [disabled]="isDisabled" [type]="type" (click)="actionPerformed()">{{value | titlecase}}</button>
-<button *ngIf="type == 'reset'" mat-raised-button [type]="type" [ngClass]="myClass"
+<button *ngIf="type == 'reset'" mat-raised-button [type]="type" [ngClass]="myClass" class="cancel"
     (click)="actionPerformed()">{{value | titlecase}}</button>
 <button *ngIf="type == 'button'" mat-raised-button color="primary" [ngClass]="myClass" [disabled]="isDisabled"
     class=" submit" [type]="type" (click)="actionPerformed()">{{value | titlecase}}</button>
