--- a/gold-admin-frontend/src/app/views/pages/customer-management/add-lead/add-lead.component.html
+++ b/gold-admin-frontend/src/app/views/pages/customer-management/add-lead/add-lead.component.html
@@ -3,11 +3,12 @@
 <!-- <kt-action-natification></kt-action-natification> -->
 <kt-toastr #toastr></kt-toastr>
 <div class="kt-portlet">
-    <div class="kt-portlet__head kt-portlet__head__custom">
+    <!-- <div class="kt-portlet__head kt-portlet__head__custom">
         <div class="kt-portlet__head-label">
             <h3 class="kt-portlet__head-title">Add New Lead</h3>
         </div>
-    </div>
+    </div> -->
+    <kt-modal-header [title]='modalTitle'></kt-modal-header>
     <div>
         <div class="kt-form">
             <form [formGroup]="leadForm">
@@ -243,20 +244,20 @@
                 </div>
 
                 <div class="kt-portlet__foot kt-portlet__foot--fit kt-portlet__no-border">
-                    <div class="kt-form__actions kt-form__actions--solid">
+                    <!-- <div class="kt-form__actions kt-form__actions--solid">
                         <div class="row text-right">
                             <div class="col-lg-12">
-                                <button type="button" mat-raised-button [mat-dialog-close]="data.animal" cdkFocusInitial
-                                    matTooltip="Cancel changes">
-                                    Cancel
-                                </button>&nbsp;
-                                <button type="button" mat-raised-button color="primary" (click)="onSubmit()"
-                                    [disabled]="leadForm.invalid" matTooltip="Save changes">
-                                    Save
-                                </button>
+                                <kt-button [type]="'button'" [value]="'Add'" [isDisabled]="leadForm.invalid"
+                                    (action)="onSubmit()">
+                                </kt-button>
+                                &nbsp;
+                                <kt-button [type]="'reset'" [value]="'Cancel'" (action)="closeModal()">
+                                </kt-button>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
+
+                    <kt-modal-footer (action)="action($event)" [isDisabled]="leadForm.invalid"></kt-modal-footer>
                 </div>
             </form>
         </div>
