--- a/gold-admin-frontend/src/app/views/pages/customer-management/customer-management.component.html
+++ b/gold-admin-frontend/src/app/views/pages/customer-management/customer-management.component.html
@@ -1,14 +1,11 @@
 <kt-portlet>
-    <kt-portlet-header [title]="'All Leads'" [class]="'kt-portlet__head--lg'" [viewLoading$]="dataSource.loading$">
+    <!-- <kt-portlet-header [title]="'All Leads'" [class]="'kt-portlet__head--lg'" [viewLoading$]="dataSource.loading$">
 
         <ng-container ktPortletTools>
-            <!-- <button (click)="addLead()" mat-raised-button matTooltip="Create new Lead" color="primary" type="button">
-                <span>Add Branch</span>
-            </button> -->
             <kt-button [type]="'button'" [value]="'Add Lead'" (action)="addLead($event)"></kt-button>
         </ng-container>>
 
-    </kt-portlet-header>
+    </kt-portlet-header> -->
     <kt-portlet-body>
 
         <div class="mat-table__wrapper">
