--- a/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
+++ b/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
@@ -10,7 +10,7 @@
             <kt-button [value]='value2' [type]='type2' (click)="action($event)"></kt-button>
         </div>
         <div class="col-2 text-right">
-            <kt-button *ngIf="rightButton" [value]='value3' [type]='type3'></kt-button>
+            <kt-button *ngIf="rightButton" [value]='value3' [type]='type3' (click)="action($event)"></kt-button>
             <kt-filter *ngIf="showfilter"></kt-filter>
         </div>
     </div>
