--- a/gold-admin-frontend/src/app/views/pages/loan-settings/add-scheme/add-scheme.component.html
+++ b/gold-admin-frontend/src/app/views/pages/loan-settings/add-scheme/add-scheme.component.html
@@ -1,4 +1,5 @@
 <kt-portlet>
+    <kt-modal-header [title]="'Add Scheme'"></kt-modal-header>
     <kt-portlet-body>
         <mat-tab-group>
             <mat-tab label="By Filling From">
@@ -116,4 +117,5 @@
 
         </mat-tab-group>
     </kt-portlet-body>
+    <kt-modal-footer (action)="action($event)"></kt-modal-footer>
 </kt-portlet>
