--- a/gold-admin-frontend/src/app/views/pages/customer-setting/customer-list/customer-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/customer-setting/customer-list/customer-list.component.html
@@ -8,8 +8,13 @@
 
                 <ng-container matColumnDef="fullName">
                     <!-- ATTRIBUTE mat-sort-header  for sorting | https://material.angular.io/components/sort/overview -->
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Full Name</mat-header-cell>
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>Customer Name</mat-header-cell>
                     <mat-cell *matCellDef="let role">{{role.fullName}}</mat-cell>
+                </ng-container>
+
+                <ng-container matColumnDef="customerId">
+                    <mat-header-cell *matHeaderCellDef mat-sort-header>Customer Id</mat-header-cell>
+                    <mat-cell *matCellDef="let role">{{role.customerId | titlecase}}</mat-cell>
                 </ng-container>
 
                 <ng-container matColumnDef="mobile">
@@ -32,19 +37,16 @@
                     <mat-cell *matCellDef="let role">{{role.city | titlecase}}</mat-cell>
                 </ng-container>
 
-                <ng-container matColumnDef="date">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Date</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.date | date}}</mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="time">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Time</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.time | titlecase}}</mat-cell>
-                </ng-container>
-
-                <ng-container matColumnDef="status">
-                    <mat-header-cell *matHeaderCellDef mat-sort-header>Status</mat-header-cell>
-                    <mat-cell *matCellDef="let role">{{role.status | titlecase}}</mat-cell>
+                <ng-container matColumnDef="actions">
+                    <mat-header-cell [ngClass]="'w-200'" *matHeaderCellDef mat-sort-header>Action</mat-header-cell>
+                    <mat-cell *matCellDef="let role" [ngClass]="'w-200'">
+                        <p>
+                            <span class="pointer">Add New Loan</span>&nbsp;|&nbsp;
+                            <span class="pointer">View Loan</span>&nbsp;|&nbsp;
+                            <span class="pointer" (click)="editCustomer(role)">Edit</span>&nbsp;|&nbsp;
+                            <span class="pointer" (click)="deleteCustomer(role)">Delete</span>
+                        </p>
+                    </mat-cell>
                 </ng-container>
 
                 <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
