--- a/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
+++ b/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
@@ -8,6 +8,16 @@
             <kt-search *ngIf="showInput"></kt-search>
             <kt-button [value]='value1' [type]='type1' class="kt-margin-r-10 kt-margin-l-10"></kt-button>
             <kt-button [value]='value2' [type]='type2' (click)="action($event)"></kt-button>
+
+            <!-- Toggle Button -->
+            <mat-button-toggle-group name="fontStyle" aria-label="Font Style" #group="matButtonToggleGroup">
+                <mat-button-toggle value="grid">
+                    Grid
+                </mat-button-toggle>
+                <mat-button-toggle value="list">
+                    List
+                </mat-button-toggle>
+            </mat-button-toggle-group>
         </div>
         <div class="col-2 text-right">
             <kt-button *ngIf="rightButton" [value]='value3' [type]='type3' (click)="action($event)"></kt-button>
