--- a/gold-admin-frontend/src/app/views/partials/components/modal/modal-header/modal-header.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/modal/modal-header/modal-header.component.html
@@ -1,5 +1,5 @@
 <div class="kt-portlet__head kt-portlet__head__custom">
     <div class="kt-portlet__head-label">
-        <h3 class="kt-portlet__head-title">{{ title | titlecase }}</h3>
+        <h3 class="kt-portlet__head-title text-color">{{ title | titlecase }}</h3>
     </div>
 </div>
