--- a/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
+++ b/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
@@ -10,7 +10,7 @@
             <kt-button [value]='value2' [type]='type2' (click)="action($event)"></kt-button>
 
             <!-- Toggle Button -->
-            <mat-button-toggle-group appearance="legacy" name="fontStyle" aria-label="Font Style" #group="matButtonToggleGroup" value="grid" *ngIf="toogle">
+            <mat-button-toggle-group appearance="legacy" name="fontStyle" aria-label="Font Style" #group="matButtonToggleGroup" value="list" *ngIf="toogle">
                 <mat-button-toggle value="grid" (click)="check('grid')">
                     Grid
                 </mat-button-toggle>
