--- a/gold-admin-frontend/src/app/views/partials/components/search/search.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/search/search.component.html
@@ -1,3 +1,3 @@
 <!-- <mat-form-field> -->
-    <input type="text" class="form-control" placeholder="enter text here">
+<input type="text" #searchInput class="form-control" placeholder="enter text here">
 <!-- </mat-form-field> -->
