--- a/gold-admin-frontend/src/app/views/pages/customer-setting/customer-grid/customer-grid.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/customer-setting/customer-grid/customer-grid.component.scss
@@ -1,9 +1,9 @@
 :host {
     .card {
         position     : relative;
-        width        : 20%;
+        width        : 24%;
         padding      : 10px;
-        margin       : 15px 20px;
+        margin       : 5px;
         border-radius: 15px;
     }
 
@@ -16,7 +16,5 @@
         border-radius: 15px;
     }
 
-    .margin {
-        margin-left: 65px
-    }
+    
 }
