customer details screen

--- a/gold-admin-frontend/src/app/views/pages/customer-setting/customer-grid/customer-grid.component.html
+++ b/gold-admin-frontend/src/app/views/pages/customer-setting/customer-grid/customer-grid.component.html
@@ -6,7 +6,7 @@
             <p class="text-secondary">AG76895B</p>
             <p class="text-color font-weight-bold">Kajal Thirtimare</p>
             <p class="text-color">+918006555580</p>
-            <p class="text-primary font-weight-bold">View Details</p>
+            <p class="text-primary font-weight-bold kt-pointer" (click)="viewDetails(1)">View Details</p>
         </div>
     </div>
 </div>
