--- a/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/filter/filter.component.html
@@ -1,3 +1,3 @@
-<button mat-raised-button class="bg">
-    <mat-icon>filter</mat-icon>
+<button mat-raised-button class="filter">
+    <img src="../../../../../assets/media/icons/svg/Text/Filter.svg" alt="">
   </button>
