--- a/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
+++ b/gold-admin-frontend/src/app/views/theme/header/topbar/topbar.component.html
@@ -10,12 +10,13 @@
             <kt-button [value]='value2' [type]='type2' (click)="action($event)"></kt-button>
 
             <!-- Toggle Button -->
-            <mat-button-toggle-group appearance="legacy" name="fontStyle" aria-label="Font Style" #group="matButtonToggleGroup" value="list" *ngIf="toogle">
+            <mat-button-toggle-group appearance="legacy" name="fontStyle" aria-label="Font Style"
+                #group="matButtonToggleGroup" value="list" *ngIf="toogle">
                 <mat-button-toggle value="grid" (click)="check('grid')">
-                    Grid
+                    <img src="../../../../../assets/media/icons/svg/Layout/Layout-grid.svg">
                 </mat-button-toggle>
                 <mat-button-toggle value="list" (click)="check('list')">
-                    List
+                    <img src="../../../../../assets/media/icons/svg/Text/Bullet-list.svg">
                 </mat-button-toggle>
             </mat-button-toggle-group>
         </div>
