aside laon details scheme csv and add

--- a/gold-admin-frontend/src/app/views/pages/customer-setting/customer-details/customer-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/customer-setting/customer-details/customer-details.component.html
@@ -124,7 +124,7 @@
                     <div class="text-color font-weight-500">15 May 2025</div>
                 </div>
             </div>
-            <div class="text-primary font-weight-500">View Details</div>
+            <div class="text-primary font-weight-500 kt-pointer" (click)="viewLoan(1)">View Details</div>
         </div>
     </div>
 </div>
