--- a/gold-admin-frontend/src/app/views/pages/loan-settings/add-scheme/add-scheme.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/loan-settings/add-scheme/add-scheme.component.scss
@@ -25,11 +25,12 @@
         right      : 30px;
         font-weight: 500;
         font-size  : 16px;
+        z-index    : 99999999999999999999999999999999999;
     }
 
-    .bg{
+    .bg {
         background-color: #454D67 !important;
-        color: rgb(193, 193, 193) !important;
+        color           : rgb(193, 193, 193) !important;
 
     }
 
