--- a/gold-admin-frontend/src/app/views/theme/brand/brand.component.html
+++ b/gold-admin-frontend/src/app/views/theme/brand/brand.component.html
@@ -1,8 +1,8 @@
 <!-- begin:: Brand -->
 <div class="kt-aside__brand kt-grid__item" [ngClass]="htmlClassService.getClasses('brand', true)" id="kt_aside_brand">
-	<div class="kt-aside__brand-logo" [ngStyle]="{'transform': 'translate(50%, 0)'}">
-		<a href="javascript:;" routerLink="/" [ngStyle]="{'transform': 'translate(50%, 0)'}">
-			<img alt="logo" [attr.src]="headerLogo" [height]="height"  />
+	<div class="kt-aside__brand-logo" >
+		<a href="javascript:;" routerLink="/" >
+			<img alt="logo" [attr.src]="headerLogo" [height]="height" [ngStyle]="{'transform': 'translate(50%, 0)'}"  />
 		</a>
 	</div>
 	<div class="kt-aside__brand-tools">
