--- a/gold-admin-frontend/src/styles.scss
+++ b/gold-admin-frontend/src/styles.scss
@@ -54,7 +54,8 @@
 }
 
 body {
-	color: #454D67 !important;
+	color      : #454D67 !important;
+	font-family: 'Poppins';
 }
 
 .text-color {
@@ -107,11 +108,44 @@ input[type=number] {
 .kt-pointer {
 	cursor: pointer
 }
-.mat-button-toggle-label-content{
+
+.mat-button-toggle-label-content {
 	padding: 0 !important
 }
-.mat-raised-button.filter{
-	min-width: auto !important;
-	padding: 5px !important;
+
+.mat-raised-button.filter {
+	min-width  : auto !important;
+	padding    : 5px !important;
 	line-height: inherit;
+}
+
+.text-primary {
+	color: #0778FA !important;
+}
+
+.font-weight-500 {
+	font-weight: 500;
+}
+
+// spinner
+.spinner-center {
+	position : absolute !important;
+	top      : 50%;
+	left     : 60%;
+	transform: translate(-50%, -50%);
+}
+
+// mat tab
+.mat-tab-label,
+.mat-tab-link {
+	font-weight: bold !important;
+	color      : #c5c6c6 !important;
+}
+
+.mat-tab-label.mat-tab-label-active {
+	color: #454D67 !important;
+}
+
+.mat-tab-group.mat-primary .mat-ink-bar {
+	background-color: #454D67 !important;
 }
