--- a/gold-admin-frontend/src/app/views/pages/user-management/roles/roles-list/roles-list.component.html
+++ b/gold-admin-frontend/src/app/views/pages/user-management/roles/roles-list/roles-list.component.html
@@ -2,119 +2,55 @@
 	<!-- PORTLET LOADING | Binded to TABLE Datasource -->
 	<!-- See prop => '~/core/_crud/models/data-sources/_base.datasource.ts' (loading$) -->
 	<kt-portlet-header [title]="'Roles list'" [class]="'kt-portlet__head--lg'" [viewLoading$]="dataSource.loading$">
-		
-		<ng-container ktPortletTools>
-			<button (click)="addRole()" mat-raised-button matTooltip="Create new role" color="primary" type="button">
-				<span>New Role</span>
-			</button>
-			<!-- Buttons (Material Angular) | See off.documenations 'https://material.angular.io/components/button/overview' -->
-			<!-- mat-raised-button | Rectangular contained button w/ elevation  -->
-		</ng-container>
 	</kt-portlet-header>
 	<!-- end::Header -->
-
 	<kt-portlet-body>
-		<!-- start::FILTERS & GROUP ACTIONS -->
-		<div class="kt-form kt-margin-b-30">
-			<!-- start::FILTERS -->
-			<div class="kt-form__filtration">
-				<div class="row align-items-center">
-					<div class="col-md-2 kt-margin-bottom-10-mobile">
-						<mat-form-field class="mat-form-field-fluid">
-							<input matInput placeholder="Search user" #searchInput placeholder="Search">
-							<mat-hint align="start">
-								<strong>Search</strong> in all fields
-							</mat-hint>
-						</mat-form-field>
-					</div>
-				</div>
-			</div>
-			<!-- end::FILTERS -->
-
-			<!-- start::GROUP ACTIONS -->
-			<!-- Group actions list: 'Delete selected' | 'Fetch selected' | 'Update status for selected' -->
-			<!-- Group actions are shared for all LISTS -->
-			<div class="row align-items-center collapse kt-form__group-actions kt-margin-top-20 kt-margin-bottom-20"
-				[ngClass]="{'show' : selection.selected.length > 0}"><!-- We show 'Group Actions' div if smth are selected -->
-				<div class="col-xl-12">
-					<div class="kt-form__group kt-form__group--inline">
-						<div class="kt-form__label kt-form__label-no-wrap">
-							<label class="kt--font-bold kt-font-danger-">
-								<span translate="ECOMMERCE.COMMON.SELECTED_RECORDS_COUNT"></span> {{ selection.selected.length }}
-							</label>
-							<!-- selectedCountsTitle => function from codeBehind (roles-list.component.ts file) -->
-							<!-- selectedCountsTitle => just returns title of selected items count -->
-							<!-- for example: Selected records count: 4 -->
-						</div>
-						<div class="kt-form__control kt-form__group--inline">
-							<button (click)="fetchRoles()" mat-raised-button matTooltip="Fetch selected roles"  class="mat-button-mt-4">
-								<mat-icon>clear_all</mat-icon>
-								Fetch Selected
-							</button>
-						</div>
-					</div>
-				</div>
-			</div>
-			<!-- end::GROUP ACTIONS -->
-		</div>
-		<!-- end::FILTERS & GROUP ACTIONS -->
-
 		<!-- MATERIAL TABLE | Binded to datasources -->
 		<!-- See off.documentations 'https://material.angular.io/components/table/overview' -->
 		<div class="mat-table__wrapper">
-			<mat-table class="lmat-elevation-z8"
-				#table
-				[dataSource]="dataSource"
-				matSort
-				#sort1="matSort"
-				matSortActive="id"
-				matSortDirection="asc"
-				matSortDisableClear>
+			<mat-table class="lmat-elevation-z8" #table [dataSource]="dataSource" matSort #sort1="matSort"
+				matSortActive="id" matSortDirection="asc" matSortDisableClear>
 				<!-- Checkbox Column -->
 
 				<!-- Table with selection -->
 				<!-- https://run.stackblitz.com/api/angular/v1?file=app%2Ftable-selection-example.ts -->
-				<ng-container matColumnDef="select">
-					<mat-header-cell *matHeaderCellDef class="mat-column-checkbox">
-						<mat-checkbox (change)="$event ? masterToggle() : null"
-							[checked]="selection.hasValue() && isAllSelected()"
-							[indeterminate]="selection.hasValue() && !isAllSelected()">
-						</mat-checkbox>
-					</mat-header-cell>
-					<mat-cell *matCellDef="let row" class="mat-column-checkbox">
-						<mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? selection.toggle(row) : null" [checked]="selection.isSelected(row)">
-						</mat-checkbox>
+
+				<ng-container matColumnDef="roleName">
+					<!-- ATTRIBUTE mat-sort-header  for sorting | https://material.angular.io/components/sort/overview -->
+					<mat-header-cell *matHeaderCellDef mat-sort-header>Role Name</mat-header-cell>
+					<mat-cell *matCellDef="let role">
+						<div class="font-weight-bold text-color" (click)="permissions(role)">
+							{{role.name}}
+						</div>
 					</mat-cell>
 				</ng-container>
 
-				<ng-container matColumnDef="id">
-					<!-- ATTRIBUTE mat-sort-header  for sorting | https://material.angular.io/components/sort/overview -->
-					<mat-header-cell *matHeaderCellDef mat-sort-header>ID</mat-header-cell>
-					<mat-cell *matCellDef="let role">{{role.id}}</mat-cell>
+				<ng-container matColumnDef="createdBy">
+					<mat-header-cell *matHeaderCellDef mat-sort-header>Created By</mat-header-cell>
+					<mat-cell *matCellDef="let role">{{role.calories}}</mat-cell>
+				</ng-container>
+				<ng-container matColumnDef="modifiedBy">
+					<mat-header-cell *matHeaderCellDef mat-sort-header>Modified By</mat-header-cell>
+					<mat-cell *matCellDef="let role">{{role.carbs}}</mat-cell>
+				</ng-container>
+				<ng-container matColumnDef="modifiedDate">
+					<mat-header-cell *matHeaderCellDef mat-sort-header>Modified Date</mat-header-cell>
+					<mat-cell *matCellDef="let role">{{role.fat}}</mat-cell>
+				</ng-container>
+				<ng-container matColumnDef="modifiedTime">
+					<mat-header-cell *matHeaderCellDef mat-sort-header>Modified Time</mat-header-cell>
+					<mat-cell *matCellDef="let role">{{role.protein}}</mat-cell>
 				</ng-container>
 
-				<ng-container matColumnDef="title">
-					<mat-header-cell *matHeaderCellDef mat-sort-header>Title</mat-header-cell>
-					<mat-cell *matCellDef="let role">{{role.title}}</mat-cell>
-				</ng-container>
-
-				<ng-container matColumnDef="actions">
+				<ng-container matColumnDef="action">
 					<mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
 					<mat-cell *matCellDef="let role">
-						<button mat-icon-button color="primary"
-							matTooltip="{{ role.isCoreRole ? 'View' : 'Edit'}} role"
-							(click)="editRole(role)">
-							<mat-icon>
-								{{ role.isCoreRole ? 'visibility' : 'create' }}
-							</mat-icon>
-						</button>&nbsp;
-						<button mat-icon-button color="warn"
-							matTooltip="Delete role"
-							type="button"
-							[disabled]="role.isCoreRole"
-							(click)="deleteRole(role)">
-							<mat-icon>delete</mat-icon>
-						</button>
+						<div [ngStyle]="{'display': 'inherit'}">
+							<div (click)="editRole(role,'edit')" class="kt-pointer text-color font-weight-bold"> Edit |
+								&nbsp;
+							</div>
+							<div class="kt-pointer text-color font-weight-bold" (click)="deleteRole(role)">Delete</div>
+						</div>
 					</mat-cell>
 				</ng-container>
 
@@ -122,8 +58,9 @@
 
 				<mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
 			</mat-table>
-			
-			<div class="mat-table__message" *ngIf="!dataSource.hasItems">No records found</div><!-- Message for empty data  -->
+
+			<div class="mat-table__message" *ngIf="!dataSource.hasItems">No records found</div>
+			<!-- Message for empty data  -->
 			<div class="mat-table__message" *ngIf="dataSource.isPreloadTextViewed$ | async">Please wait....</div>
 		</div>
 
@@ -133,7 +70,8 @@
 			<mat-spinner [diameter]="20" *ngIf="dataSource.loading$ | async"></mat-spinner>
 			<!-- MATERIAL PAGINATOR | Binded to dasources -->
 			<!-- See off.documentations 'https://material.angular.io/components/paginator/overview' -->
-			<mat-paginator [pageSize]="10" [pageSizeOptions]="[3, 5, 10]" [length]="dataSource.paginatorTotal$ | async" [showFirstLastButtons]="true"></mat-paginator>
+			<mat-paginator [pageSize]="10" [pageSizeOptions]="[3, 5, 10]" [length]="dataSource.paginatorTotal$ | async"
+				[showFirstLastButtons]="true"></mat-paginator>
 		</div>
 		<!-- end: BOTTOM -->
 	</kt-portlet-body>
