--- a/gold-admin-frontend/src/app/views/pages/customer-management/add-lead/add-lead.component.html
+++ b/gold-admin-frontend/src/app/views/pages/customer-management/add-lead/add-lead.component.html
@@ -23,36 +23,57 @@
                         <div class="col-lg-12 kt-margin-bottom-20-mobile">
 
                             <!-- Name -->
-                            <div class="row">
+                            <div class="row kt-padding-t-15">
                                 <div class="col-4">
                                     <mat-label>Full Name</mat-label>
                                 </div>
 
                                 <div class="col-8">
-                                    <mat-form-field appearance="outline" class="w-100">
+                                    <!-- <mat-form-field appearance="outline" class="w-100">
                                         <input matInput formControlName="name" autocomplete="off"
                                             placeholder="Enter Full Name">
                                         <mat-error *ngIf="controls.name.errors?.required">Required field</mat-error>
-                                    </mat-form-field>
+                                    </mat-form-field> -->
+
+                                    <div class="input-group">
+                                        <!-- <div class="input-group-prepend">
+                                          <span class="input-group-text">First and last name</span>
+                                        </div> -->
+                                        <input type="text" aria-label="First name" placeholder="First Name"
+                                            class="form-control" formControlName="firstName">
+                                        <input type="text" aria-label="Last name" placeholder="Last Name"
+                                            class="form-control" formControlName="lastName">
+                                    </div>
+                                    <mat-error
+                                        *ngIf="controls.firstName.errors?.required && controls.firstName.touched || controls.lastName.errors?.required && controls.lastName.touched">
+                                        Required field
+                                    </mat-error>
+                                    <!-- <mat-error *ngIf="controls.lastName.errors?.required">Required field</mat-error> -->
+
                                 </div>
                             </div>
 
 
-                            <div class="row">
+                            <div class="row kt-padding-t-15">
                                 <!-- Mobile -->
                                 <div class="col-4">
                                     <mat-label>Mobile Number</mat-label>
                                 </div>
 
                                 <div class="col-5">
-                                    <mat-form-field appearance="outline" class="w-100">
-                                        <input matInput formControlName="mobileNumber" autocomplete="off"
-                                            placeholder="Enter mobile number">
-                                        <mat-error *ngIf="controls.mobileNumber.errors?.required">Required field
-                                        </mat-error>
-                                        <mat-error *ngIf="controls.mobileNumber.errors?.pattern">Invalid Input
-                                        </mat-error>
-                                    </mat-form-field>
+                                    <!-- <mat-form-field appearance="outline" class="w-100"> -->
+                                    <input class="form-control" type="number" formControlName="mobileNumber"
+                                        autocomplete="off" placeholder="Enter mobile number" [readonly]="viewOnly"
+                                        [class.isError]="controls.mobileNumber.touched && controls.mobileNumber.invalid">
+                                    <mat-error
+                                        *ngIf="controls.mobileNumber.errors?.required && controls.mobileNumber.touched">
+                                        Required field
+                                    </mat-error>
+                                    <mat-error
+                                        *ngIf="controls.mobileNumber.errors?.pattern && controls.mobileNumber.touched">
+                                        Invalid Input
+                                    </mat-error>
+                                    <!-- </mat-form-field> -->
                                 </div>
 
                                 <div class="col-3">
@@ -77,14 +98,17 @@
                                     <div class="col-4"></div>
 
                                     <div class="col-5">
-                                        <mat-form-field appearance="outline" class="w-100">
-                                            <input matInput formControlName="otp" autocomplete="off"
-                                                placeholder="Enter OTP">
-                                            <mat-error *ngIf="controls.otp.errors?.required">Required field
-                                            </mat-error>
-                                            <mat-error *ngIf="controls.otp.errors?.pattern">Invalid Input
-                                            </mat-error>
-                                        </mat-form-field>
+                                        <!-- <mat-form-field appearance="outline" class="w-100"> -->
+                                        <input class="form-control" formControlName="otp" autocomplete="off"
+                                            placeholder="Enter OTP"
+                                            [class.isError]="controls.otp.touched && controls.otp.invalid">
+                                        <mat-error *ngIf="controls.otp.errors?.required && controls.otp.touched">
+                                            Required field
+                                        </mat-error>
+                                        <mat-error *ngIf="controls.otp.errors?.pattern && controls.otp.touched">Invalid
+                                            Input
+                                        </mat-error>
+                                        <!-- </mat-form-field> -->
                                     </div>
 
                                     <div class="col-3">
@@ -98,21 +122,26 @@
 
                             </div>
 
-                            <div class="row">
+                            <div class="row kt-padding-t-15">
                                 <!-- PAN -->
                                 <div class="col-4">
                                     <mat-label>Pan Number</mat-label>
                                 </div>
 
                                 <div class="col-5">
-                                    <mat-form-field appearance="outline" class="w-100">
-                                        <input matInput formControlName="panCardNumber" autocomplete="off"
-                                            placeholder="PAN Number">
-                                        <mat-error *ngIf="controls.panCardNumber.errors?.required">Required field
-                                        </mat-error>
-                                        <mat-error *ngIf="controls.panCardNumber.errors?.pattern">Invalid Input
-                                        </mat-error>
-                                    </mat-form-field>
+                                    <!-- <mat-form-field appearance="outline" class="w-100"> -->
+                                    <input class="form-control" formControlName="panCardNumber" autocomplete="off"
+                                        placeholder="PAN Number"
+                                        [class.isError]="controls.panCardNumber.touched && controls.panCardNumber.invalid">
+                                    <mat-error
+                                        *ngIf="controls.panCardNumber.errors?.required && controls.panCardNumber.touched">
+                                        Required field
+                                    </mat-error>
+                                    <mat-error
+                                        *ngIf="controls.panCardNumber.errors?.pattern && controls.panCardNumber.touched">
+                                        Invalid Input
+                                    </mat-error>
+                                    <!-- </mat-form-field> -->
                                 </div>
 
                                 <div class="col">
@@ -131,77 +160,83 @@
 
 
                             <!-- State -->
-                            <div class="row">
+                            <div class="row kt-padding-t-15">
                                 <div class="col-4">
                                     <mat-label>State</mat-label>
                                 </div>
 
                                 <div class="col-8">
-                                    <mat-form-field appearance="outline" class="w-100">
-                                        <mat-label>State</mat-label>
-                                        <mat-select formControlName="stateId" (selectionChange)="getCities($event)">
-                                            <mat-option *ngFor="let state of states" [value]="state.id">
-                                                {{state.name}}
-                                            </mat-option>
-                                        </mat-select>
-                                        <mat-error *ngIf="controls.stateId.errors?.required">Required field</mat-error>
+                                    <!-- <mat-form-field appearance="outline" class="w-100"> -->
+                                    <!-- <mat-label>State</mat-label> -->
+                                    <select class="form-control" formControlName="stateId" (change)="getCities($event)"
+                                        [disabled]="viewOnly"
+                                        [class.isError]="controls.stateId.touched && controls.stateId.invalid">
+                                        <option disabled selected> Select </option>
+                                        <option *ngFor="let state of states" [value]="state.id">
+                                            {{state.name}}
+                                        </option>
+                                    </select>
 
-                                    </mat-form-field>
+                                    <!-- </mat-form-field> -->
                                 </div>
                             </div>
 
 
                             <!-- City -->
-                            <div class="row">
+                            <div class="row kt-padding-t-15">
                                 <div class="col-4">
                                     <mat-label>City</mat-label>
                                 </div>
 
                                 <div class="col-8">
-                                    <mat-form-field appearance="outline" class="w-100">
-                                        <mat-label>City</mat-label>
-                                        <mat-select formControlName="cityId">
-                                            <mat-option *ngFor="let city of cities" [value]="city.id">
-                                                {{city.name}}
-                                            </mat-option>
-                                        </mat-select>
-                                        <mat-error *ngIf="controls.cityId.errors?.required">Required field</mat-error>
-                                    </mat-form-field>
+                                    <!-- <mat-form-field appearance="outline" class="w-100"> -->
+                                    <select class="form-control" formControlName="cityId" [disabled]="viewOnly"
+                                        [class.isError]="controls.cityId.touched && controls.cityId.invalid">
+                                        <option disabled selected> Select </option>
+                                        <option *ngFor="let city of cities" [value]="city.id">
+                                            {{city.name}}
+                                        </option>
+                                    </select>
+                                    <mat-error *ngIf="controls.cityId.touched && controls.cityId.errors?.required">
+                                        Required field</mat-error>
+                                    <!-- </mat-form-field> -->
                                 </div>
                             </div>
 
                             <!-- Date & Time -->
-                            <div class="row">
+                            <div class="row kt-padding-t-15">
                                 <div class="col-4">
                                     <mat-label>Date & Time</mat-label>
                                 </div>
 
                                 <div class="col-8">
-                                    <mat-form-field appearance="outline" class="w-100">
-                                        <input matInput formControlName="dateTime" readonly
-                                            placeholder="Enter Full Name" value="{{currentDate |  date:'medium'}}">
-                                        <mat-error *ngIf="controls.dateTime.errors?.required">Required field</mat-error>
-                                    </mat-form-field>
+                                    <!-- <mat-form-field appearance="outline" class="w-100"> -->
+                                    <input class="form-control" formControlName="dateTime" readonly
+                                        placeholder="Enter Full Name" value="{{currentDate |  date:'medium'}}">
+                                    <mat-error *ngIf="controls.dateTime.errors?.required ">Required field</mat-error>
+                                    <!-- </mat-form-field> -->
                                 </div>
                             </div>
 
 
                             <!-- Status -->
-                            <div class="row">
+                            <div class="row kt-padding-t-15">
                                 <div class="col-4">
                                     <mat-label>Select Status</mat-label>
                                 </div>
 
                                 <div class="col-8">
-                                    <mat-form-field appearance="outline" class="w-100">
-                                        <mat-label>Select</mat-label>
-                                        <mat-select formControlName="statusId">
-                                            <mat-option *ngFor="let stat of status" [value]="stat.id">
-                                                {{stat.status}}
-                                            </mat-option>
-                                        </mat-select>
-                                        <mat-error *ngIf="controls.statusId.errors?.required">Required field</mat-error>
-                                    </mat-form-field>
+                                    <!-- <mat-form-field appearance="outline" class="w-100"> -->
+                                    <!-- <mat-label>Select</mat-label> -->
+                                    <select class="form-control" formControlName="statusId" [disabled]="viewOnly"
+                                        [class.isError]="controls.statusId.touched && controls.statusId.invalid">
+                                        <option *ngFor="let stat of status" [value]="stat.id">
+                                            {{stat.status}}
+                                        </option>
+                                    </select>
+                                    <mat-error *ngIf="controls.statusId.errors?.required && controls.statusId.touched">
+                                        Required field</mat-error>
+                                    <!-- </mat-form-field> -->
                                 </div>
                             </div>
 
